      - Added "executable()" method to return the main executable of an app or
        library, if there is one.
      - Added other executable methods to App::Info::RDBMS::PostgreSQL,
        including "postgres()", "createdb()", "createuser()", and others.
      - Added other executable methods to App::Info::RDBMS::PostgreSQL,
        including "ab()", "apachectl()", "apxs()", and others.

0.41  2004-11-28T20:01:57
      - Fixed Apache, SQLite, and Iconv tests to pass under Win32.
      - Fixed "bin_dir()" method for Apache module to return the same
        directory as "httpd_root()" on Win32.

0.40  2004-11-27T19:45:01
      - Eliminated "Odd number of elements in hash assignment" warning when
        creating an App::Info::Handler::Prompt object.
      - Changed SQLite event messages to simply refer to "SQLite" instead
        of "sqlite3 or sqlite".
      - Added new parameters to "new()", along with accompanying accessors to
        collect their values: "search_exe_names", "search_bin_dirs",
        "search_lib_names", "search_so_lib_names", search_lib_dirs",
        "search_inc_names", and "search_inc_dirs". These are array references,
        and their values are used to search for application files on the local
        file system. Users can now override the directories ande files that
        the classes search for with their own values. Subclasses override the
        accessor methods to provide such values.
      - Updated subclases to use the new "search" methods.
      - Added "search_conf_names" and "search_conf_dirs" parameters and
        methods to App::Info::HTTPD::Apache to allow users to affect the
        file names paths used to search for Apache configuration files.
      - Added support for finding iconv on Win32.

0.30  2004-11-20T19:10:55
      - Fixed number of tests to skip in "sqlite_info.t" for systems that
        don't have SQLite installed. Reported by numerous CPAN testers.
      - Fixed carp.t to be compatable with older Perls.