@@ -1,9 +1,13 @@
 #!/usr/bin/perl -w
 
+use File::Spec::Functions;
+my $bin_dir = catdir qw(t scripts);
+$bin_dir = catdir(qw(t bin)) unless -d $bin_dir;
+
 if ($ARGV[0] eq '--version') {
     print "PostgreSQL 8.0.0\n";
 } elsif ($ARGV[0] eq '--bindir') {
-    print "t/bin\n";
+    print "$bin_dir\n";
 } elsif ($ARGV[0] eq '--includedir') {
     print "t/testinc\n";
 } elsif ($ARGV[0] eq '--libdir' || $ARGV[0] eq '--pkglibdir') {
